@@ -42,6 +42,6 @@
 #define XWACOM_PARAM_FILEMODEL  100
 #define XWACOM_PARAM_FILEOPTION 101
 #define XWACOM_PARAM_GIMP       102
-
+#define XWACOM_PARAM_MMT        103
 
 #endif /* __XF86_XWACOM_H */
